# Seed_perf

./: .gitignore  CMakeLists.txt  README.md  setup.sh
VSIPerf/: CMakeLists.txt
VSIPerf/include/: AlgConsts.h  AnyType.h  ModularAlgorithmBase.h  NtupleObj.h  ProcessorBase.h  TreeManager.h  TruthVertexPos.h  VsiAnaExample.h  VsiAnaModular.h  VsiBonsaiTool.h  VsiBonsaiTool.icc  VsiEfficiencyProcessor.h  VsiEventDisplay.h  VsiEventInfoProcessor.h  VsiPrimaryVertexProcessor.h  VsiSecondaryVertexBasicProcessor.h  VsiTrackProcessor.h  VsiTruthHelper.h  VsiTruthProcessor.h
VSIPerf/include/ntuple/: DVObj.h  EventInfoObj.h  PVObj.h  TrackObj.h  TruthVtxObj.h
VSIPerf/macros/: DVeffAnalysis.C  DVeffAnalysis_Giuliano.C  DVeffDisplay.C  efficiency.C  merge.py  merge_abb.py  rootlogon.C  run.sh
VSIPerf/macros/VHaaPlotter/: get2DEfficiencyPlots.C  getDistributions.C  getEfficiencyPlots.C
VSIPerf/plotter/: AtlasUtils.C  plotRes.C  plotter.py  selEff.C
VSIPerf/plotter/TestFiles/: processed_310189_Pythia8EvtGen_A14NNPDF23LO_WmuHNL50_15G_lt100dd_el2.root  processed_310190_Pythia8EvtGen_A14NNPDF23LO_WmuHNL50_15G_lt100dd_el2.root
VSIPerf/python/: commonOptions.py  run_stopBL.py  run_vsiAna_modular.py
VSIPerf/src/: LinkDef.h  ModularAlgorithmBase.cxx  NtupleObj.cxx  ProcessorBase.cxx  TreeManager.cxx  TruthVertexPos.cxx  VsiAnaExample.cxx  VsiAnaModular.cxx  VsiBonsaiTool.cxx  VsiEfficiencyProcessor.cxx  VsiEventDisplay.cxx  VsiEventInfoProcessor.cxx  VsiPrimaryVertexProcessor.cxx  VsiSecondaryVertexBasicProcessor.cxx  VsiTrackProcessor.cxx  VsiTruthHelper.cxx  VsiTruthProcessor.cxx
plots/: needed.txt
samples/: HNL.txt  List_MC_samples.txt  ggN1N1.txt  haa.txt
seleff/cleaned/: mc16_13TeV.448158.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_10_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448162.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_50_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448166.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_450_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448170.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_850_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448174.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_1250_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448178.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_1650_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448182.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_2050_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  mc16_13TeV.448186.MGPy8EG_A14NNPDF23LO_GG_qqn1_2400_2350_rpvLF_1ns.20190228_TrkCleaning_v01_VsiAnaModular.root  (+1 more)
